--- a/tests/fixtures/before.html
+++ b/tests/fixtures/before.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-      <meta charset="utf-8">
-      <title>Курсы по программированию Хекслет</title>
-</head>
-
-<body>
-      <img src="/assets/professions/python.png" alt="Иконка профессии Python-программист">
-      <h3>
-            <a href="/professions/python">Python-программист</a>
-      </h3>
-</body>
-
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   Курсы по программированию Хекслет
+  </title>
+ </head>
+ <body>
+  <img alt="Иконка профессии Python-программист" src="/assets/professions/python.png"/>
+  <h3>
+   <a href="/professions/python">
+    Python-программист
+   </a>
+  </h3>
+ </body>
 </html>
