--- a/tests/fixtures/after.html
+++ b/tests/fixtures/after.html
@@ -1,3 +1,4 @@
+<!-- Используйте этот код в своём проекте -->
 <!DOCTYPE html>
 <html lang="ru">
  <head>
@@ -5,13 +6,21 @@
   <title>
    Курсы по программированию Хекслет
   </title>
+  <link href="https://cdn2.hexlet.io/assets/menu.css" media="all" rel="stylesheet"/>
+  <link href="ru-hexlet-io-courses_files/ru-hexlet-io-assets-application.css" media="all" rel="stylesheet"/>
+  <link href="ru-hexlet-io-courses_files/ru-hexlet-io-courses.html" rel="canonical"/>
  </head>
  <body>
   <img alt="Иконка профессии Python-программист" src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-python.png"/>
+  <img alt="Иконка профессии Python-ананист" src="https://s7d2.scene7.com/is/image/Caterpillar/CM20180911-37279-17325"/>
   <h3>
    <a href="/professions/python">
     Python-программист
    </a>
   </h3>
+  <script src="https://js.stripe.com/v3/">
+  </script>
+  <script src="ru-hexlet-io-courses_files/ru-hexlet-io-packs-js-runtime.js">
+  </script>
  </body>
 </html>
